...
          subject: 'An toàn thông tin',
          room: 'A4-402',
        ),
        0: _OverviewPreviewItem(
          date: '29/09',
          time: '15:45 - 18:25',
          subject: 'Thiết kế web nâng cao',
          room: 'A6-105 (PC)',
          active: true,
        ),
        1: _OverviewPreviewItem(
          date: '30/09',
          time: '07:00 - 09:30',
...
